@@ -1,3 +1,7 @@
+2001-04-18  Frank Warmerdam  <warmerdam@pobox.com>
+
+	* frmts/ogdi/ogdidataset.cpp: fixed rastersize calculation.
+
 2001-04-17  Frank Warmerdam  <warmerdam@pobox.com>
 
 	* frmts/ogdi/*, ogr/ogrsf_frmts/ogdi/*: Modified to utilize layer
